--- a/TinderUI_Sampler/Base.lproj/Main.storyboard
+++ b/TinderUI_Sampler/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,44 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TinderUI_Sampler" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TJ4-oP-JcL" customClass="PoiView" customModule="Poi">
+                                <rect key="frame" x="87" y="248" width="240" height="400"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="I04-lW-KIQ">
+                                        <rect key="frame" x="0.0" y="0.0" width="240" height="400"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="I04-lW-KIQ" firstAttribute="top" secondItem="TJ4-oP-JcL" secondAttribute="top" id="1gV-FK-Vfb"/>
+                                    <constraint firstAttribute="trailing" secondItem="I04-lW-KIQ" secondAttribute="trailing" id="Oae-Lt-yG1"/>
+                                    <constraint firstAttribute="height" constant="400" id="Rca-LE-YlX"/>
+                                    <constraint firstItem="I04-lW-KIQ" firstAttribute="leading" secondItem="TJ4-oP-JcL" secondAttribute="leading" id="cWx-Wu-YbE"/>
+                                    <constraint firstAttribute="bottom" secondItem="I04-lW-KIQ" secondAttribute="bottom" id="pFE-Vj-aid"/>
+                                    <constraint firstAttribute="width" constant="240" id="vSL-ba-mGU"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="TJ4-oP-JcL" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1g0-C4-Aab"/>
+                            <constraint firstItem="TJ4-oP-JcL" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="vYd-0i-g8o"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="I04-lW-KIQ" id="5MV-qT-8oQ"/>
+                        <outlet property="poiView" destination="TJ4-oP-JcL" id="JkI-r6-QFg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-57.971014492753625" y="126.5625"/>
         </scene>
     </scenes>
 </document>
